--- a/css/infobox.css
+++ b/css/infobox.css
@@ -17,6 +17,11 @@
     border: 1px solid black;
     background-color: rgba(248,248,248,0.6);
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
+    z-index: 0;
+}
+
+.popBox:hover{
+    background-color: rgba(248,248,248,1);
 }
 
 .pb_header{
@@ -48,24 +53,29 @@
     padding-bottom: 4px;
     margin-bottom: 12px;
 }
+.listdomain,
+.listhash,
+.listparm{
+    margin-bottom: 40px;
+}
 
-.listDomain li,
-.listHash li,
-.listParm li{
+.listdomain li,
+.listhash li,
+.listparm li{
     font-size: 16px;
     font-weight: bold;
     padding-left: 8px;
     margin-bottom: 8px;
 }
 
-.listDomain li{
+.listdomain li{
     color: #f44336;
 }
 
-.listHash li{
+.listhash li{
     color: #2196F3;
 }
 
-.listParm li{
+.listparm li{
     color: #4CAF50;
 }
