Add new Files and edit js

--- a/css/infobox.css
+++ b/css/infobox.css
@@ -5,12 +5,19 @@
     clear:both;
 }
 
+/* 天地の中央 */
+.tb_center{
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%); /* Safari用 */
+    transform: translateY(-50%);
+}
 
 /* popBox */
 
 .popBox{
     width: 360px;
-    height: 800px;
+    height: 360px;
     position: fixed;
     top: 10px;
     left: 10px;
@@ -25,34 +32,45 @@
 }
 
 .pb_header{
-    width: 96%;
-    margin: 12px auto 18px;
+    width: 100%;
+    height: 60px;
+    background-color: #AED581;
+    box-shadow: 0px 4px 6px #BDBDBD;
 }
 
 .pb_title{
     float: left;
     font-size: 24px;
+    font-weight: bold;
+    margin: 0 0 0 10px;
 }
 
 .pb_close{
     float: right;
     cursor: pointer;
+    margin-right: 10px;
 }
 
 /* box Wrap*/
 
 .pb_content{
+    width: 356px;
+    height: 292px;
+    padding-top: 24px;
     clear: both;
+    overflow: auto;
 }
 
 .pb_content h2{
-    font-size: 20px;
+    font-size: 18px;
+    font-weight: bold;
     width: 96%;
     margin: 0 auto;
     border-bottom: 2px solid #AED581;
     padding-bottom: 4px;
     margin-bottom: 12px;
 }
+
 .listdomain,
 .listhash,
 .listparm{
@@ -78,4 +96,23 @@
 
 .listparm li{
     color: #4CAF50;
+}
+
+.discription{
+    width: 96%;
+    margin: 0 auto;
+    font-weight: bold;
+}
+
+.discription a{
+    color: #2196F3;
+    text-decoration: underline;
+}
+
+.discription a:visited{
+    color: #2196F3;
+}
+
+.discription a:link{
+    color: #2196F3;
 }
