--- a/css/infobox.css
+++ b/css/infobox.css
@@ -5,6 +5,10 @@
     clear:both;
 }
 
+.f_black{
+    color: #212121;
+}
+
 /* 天地の中央 */
 .tb_center{
     position: relative;
@@ -13,7 +17,11 @@
     transform: translateY(-50%);
 }
 
-/* popBox */
+/*
+
+    popBox
+
+ */
 
 .popBox{
     width: 360px;
@@ -31,6 +39,10 @@
     background-color: rgba(248,248,248,1);
 }
 
+.pb_title,.pb_close{
+    text-align: left;
+}
+
 .pb_header{
     width: 100%;
     height: 60px;
@@ -46,26 +58,52 @@
 }
 
 .pb_close{
+    text-decoration: none;
+    font-size: 24px;
+    font-weight: bold;
     float: right;
     cursor: pointer;
     margin-right: 10px;
 }
 
-/* box Wrap*/
+.pb_close a{
+    color: #212121;
+}
+
+.pb_close a:hover{
+    color: #212121;
+}
+
+
+/*
+
+    box Wrap
+
+*/
 
 .pb_content{
     width: 356px;
     height: 292px;
-    padding-top: 24px;
     clear: both;
     overflow: auto;
 }
 
-.listTitle,.tagCheckTitle{
+.contentWrap{
+    width: 96%;
+    margin: 0 auto 40px;
+}
+
+.listWrap{
+    margin-bottom: 20px;
+}
+
+.listTitle,.pb_content li{
+    text-align: left;
+}
+
+.listTitle{
     font-size: 18px;
     font-weight: bold;
-    width: 96%;
-    margin: 0 auto;
     border-bottom: 2px solid #AED581;
     padding-bottom: 4px;
     margin-bottom: 12px;
@@ -73,13 +111,12 @@
 
 .tagCheckTitle{
     font-size: 14px;
+    font-weight: bold;
+    color: #283593;
+    margin-bottom: 10px;
 }
 
-.listWrap{
-    margin-bottom: 40px;
-}
-
-.listWrap li{
+.contentWrap li{
     font-size: 16px;
     font-weight: bold;
     padding-left: 8px;
@@ -99,9 +136,7 @@
 }
 
 .discription{
-    width: 96%;
     font-size: 14px;
-    margin: 0 auto;
     font-weight: bold;
 }
 
