--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,14 @@
 body{
     width: 400px;
     height: 400px;
+    border:1px solid black;/*debug用*/
+}
+
+.center{
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%); /* Safari用 */
+    transform: translateY(-50%);
 }
 
 .wrapper{
