--- a/css/infobox.css
+++ b/css/infobox.css
@@ -13,6 +13,10 @@
     transform: translateY(-50%);
 }
 
+ul li{
+    list-style: none;
+}
+
 /*
 
     popBox
@@ -24,14 +28,16 @@
     top: 10px;
     left: 10px;
     border: 1px solid #78909C;
-    background-color: rgba(248,248,248,0.6);
+    background-color: rgb(248,248,248);
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
     z-index: 0;
 }
 
-.popBox:hover{
-    background-color: rgba(248,248,248,1);
-}
+/*
+
+    header部分
+
+ */
 
 .pb_title,.pb_close{
     text-align: left;
@@ -55,11 +61,12 @@
     float:right;
 }
 
-.pb_leftBtn,.pb_rightBtn{
+.pb_leftBtn,.pb_rightBtn,.pb_close_btn{
     width: 40px;
     height: 40px;
-    margin: 0px;
+    margin: 0;
     margin-right: 12px;
+    line-height: normal;
     font-size:24px;
     color: #FAFAFA;
     text-align: center;
@@ -84,16 +91,7 @@
 }
 
 .pb_close_btn{
-    width: 40px;
-    height: 40px;
-    font-size: 24px;
-    font-weight: bold;
-    border-radius: 50%;
-    color: #FAFAFA;
-    text-align: center;
     float: right;
-    cursor: pointer;
-    margin-right: 10px;
 }
 
 .pb_close_btn:hover{
